Fix merge conflicts

--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Last Minute To Do</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Single%20Day" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link rel="stylesheet" href="popup.css">
+    <script src="jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -25,4 +29,5 @@
     <footer>Last Minute To Do 1.0.0</footer>
     <script src="popup.js"></script>
 </body>
+
 </html>
