--- a/popup.html
+++ b/popup.html
@@ -15,13 +15,7 @@
 
 <body>
     <header>To Do List</header>
-    <ul id="myUL">
-        <li>CS1010 Lab 1 Assignment</li>
-        <li>EE2026 report 1</li>
-        <li>Module Feedback survey</li>
-        <li class="checked">Flower the plants</li>
-        <li class="checked">Buy bubble tea</li>
-    </ul>
+    <ul id="myUL"></ul>
     <div id="myDIV" class="addTask">
         <img class="addIcon" src="images/icon_128.png" alt="Logo">
         <input class="addInput" type="text" id="myInput" placeholder="Add task here...">
