--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link rel="stylesheet" href="popup.css">
     <script src="jquery-3.6.0.min.js"></script>
+    <script src="jquery-1.13.0.ui.js"></script>
 </head>
 
 <body>
