Change variable names

--- a/popup.html
+++ b/popup.html
@@ -16,10 +16,10 @@
 
 <body>
     <header>To Do List</header>
-    <ul id="myUL"></ul>
-    <div id="myDIV" class="addTask">
+    <ul id="taskUL"></ul>
+    <div id="taskDIV" class="addTask">
         <img class="addIcon" src="images/icon_128.png" alt="Logo">
-        <input class="addInput" type="text" id="myInput" placeholder="Add task here...">
+        <input class="addInput" type="text" id="taskInput" placeholder="Add task here...">
     </div>
     <footer>Last Minute To Do 1.0.0</footer>
     <script src="popup.js"></script>
